Add basic implementation

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -32,6 +32,6 @@
   ],
   "start_url": "/",
   "display": "standalone",
-  "theme_color": "#ffffff",
-  "background_color": "#ffffff"
+  "theme_color": "#ebf6e8",
+  "background_color": "#ebf6e8"
 }
