--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "antd": "^5.1.6",
     "axios": "^1.2.2",
     "i18next": "^22.4.9",
+    "openai": "^3.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-i18next": "^12.1.4",
