--- a/package.json
+++ b/package.json
@@ -3,20 +3,17 @@
   "version": "0.1.0",
   "dependencies": {
     "@ant-design/icons": "^5.0.1",
-    "@reduxjs/toolkit": "^1.9.2",
     "antd": "^5.1.6",
     "axios": "^1.2.2",
     "i18next": "^22.4.9",
     "openai": "^3.2.1",
     "react": "^17.0.2",
+    "react-diff-components": "0.0.4",
     "react-dom": "^17.0.2",
     "react-i18next": "^12.1.4",
     "react-icons": "^4.8.0",
-    "react-redux": "^8.0.5",
-    "react-responsive": "^9.0.2",
     "react-router-dom": "^6.7.0",
     "react-scripts": "^5.0.1",
-    "redux": "^4.2.1",
     "workbox-core": "^6.5.4",
     "workbox-expiration": "^6.5.4",
     "workbox-precaching": "^6.5.4",
