--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
     "@ant-design/icons": "^5.0.1",
     "antd": "^5.1.6",
     "axios": "^1.2.2",
+    "diff": "^5.1.0",
     "i18next": "^22.4.9",
     "openai": "^3.2.1",
     "react": "^17.0.2",
-    "react-diff-components": "0.0.4",
     "react-dom": "^17.0.2",
     "react-i18next": "^12.1.4",
     "react-icons": "^4.8.0",
